tests/ui/structs-enums/enum-rec/issue-17431-6.stderr
error[E0072]: recursive type `Foo` has infinite size
  --> $DIR/issue-17431-6.rs:3:1
   |
LL | enum Foo {
   | ^^^^^^^^
LL |
LL |     X(UnsafeCell<Option<Foo>>),
   |                         --- recursive without indirection
   |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to break the cycle
   |
LL |     X(UnsafeCell<Option<Box<Foo>>>),
   |                         ++++   +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0072`.
